# localai

./: .gitignore  Dockerfile  README.md  assistant.py  docker-compose.yml  main.py
rust-core/: Cargo.toml
rust-core/src/: main.rs
