[package]
name    = "localai-core"
version = "0.1.0"
edition = "2021"

[dependencies]
axum        = "0.7"
tokio       = { version = "1", features = ["full"] }
reqwest     = { version = "0.12", features = ["json", "stream"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
sha2        = "0.10"
bytes       = "1"
futures     = "0.3"
